# mraa

./: CMakeLists.txt  build-csharp-edison-poky.sh
api/mraa/: types.h
examples/: CMakeLists.txt
examples/imraa/: CMakeLists.txt  README.md  imraa.c  imraa.conf
include/: mraa_internal_types.h
src/: CMakeLists.txt  mraa.c
src/aio/: aio.c
src/arm/: beaglebone.c  raspberry_pi.c
src/csharp/: CMakeLists.txt  Extensions.cs  mraacsharp.i  mraacsharp.pc.cmake
src/gpio/: gpio.c
src/pwm/: pwm.c
src/usb/: ftdi_ft4222.c
src/x86/: intel_edison_fab_c.c  intel_galileo_rev_d.c  intel_galileo_rev_g.c  intel_nuc5.c  up.c
